personal_prj_JungHyeok-28 [Task] Chapter 7 학습
영화, 영화리뷰, 멤버, 영화이미지 엔티티설계
repository 쿼리작성 및 테스트코드 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,5 +38,5 @@ spring:
     password:
   jpa:
     hibernate:
-      dialect: org.hibernate.dialect.MariaDBDialect
+      dialect: org.hibernate.dialect.MariaDB103Dialect
       ddl-auto: create
